syntax = "proto3";

option csharp_namespace = "DevForge_API_gRPC_Sample";

package product;

service ProductService {
    rpc GetProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    int32 id = 1;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    float price = 3;
}

